--- a/ScraperApp/ScraperApp.csproj
+++ b/ScraperApp/ScraperApp.csproj
@@ -2,8 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>aspnet-ScraperApp-9E33DC77-86F1-4681-80A0-C4E8D47B4092</UserSecretsId>
+    <UserSecretsId>aspnet-ScraperApp-D7EA6544-850D-41D1-B020-10275D4AC67B</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="chromedriver.exe" />
+  </ItemGroup>
 
 
   <ItemGroup>
@@ -14,7 +18,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="79.0.3945.3600" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\ScraperConsole\ScraperConsole.csproj" />
   </ItemGroup>
 
 </Project>
